--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
 <!-- start of new content -->
 <aside>
-    <h2>About Me</h2>
+    <h2>About Me 2</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae similique! Odit.</p>
     <p>cora</p>
 </aside>
 <!-- end of new content -->
-
+</body>
 <footer>
     Made with ♥ @ Udacity
 </footer>
